added optional algebraic definition of determinant

--- a/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
@@ -281,11 +281,20 @@
    "source": [
     "## Permuted LU-factorization\n",
     "\n",
-    "From [](#nonsingular), every nonsingular matrix $A$ can be reduced to upper triangular form using [type 1 operations](./023-linsys-gauss.ipynb#rowop1) and [type 2 operations](#rowop2). If we perform all the permutations first using a permutation matrix $P$, then we obtain a [regular matrix](./023a-linsys-LU.ipynb#regular_matrix) $PA$ that admits an $LU$ factorization. Hence we can define the _permuted LU factorization_ of a nonsingular matrix $A$ as\n",
+    "From [](#nonsingular), every nonsingular matrix $A$ can be reduced to upper triangular form using [type 1 operations](./023-linsys-gauss.ipynb#rowop1) and [type 2 operations](#rowop2). If we perform all the permutations first using a permutation matrix $P$, then we obtain a [regular matrix](./023a-linsys-LU.ipynb#regular_matrix) $PA$ that admits an $LU$ factorization. Hence we can define the _permuted LU factorization_ of a nonsingular matrix $A$ as follows.\n",
+    "\n",
+    ":::{prf:definition} Permuted LU factorization\n",
+    ":label: plu-factorization-defn\n",
+    "\n",
+    "Any square matrix $A$ can be written in the form:\n",
+    "\n",
     "\\begin{equation} \n",
     "\\label{perm_LU} \n",
     "PA = LU\n",
     "\\end{equation}\n",
+    "\n",
+    "This is known as a permuted-LU-factorization, or PLU-factorization, of $A$.\n",
+    ":::\n",
     "\n",
     "Given a permuted LU factorization of the matrix $A$, we can solve the system of equations by first doing forward substitution with $L\\textbf{z}= P\\textbf{b}$ and back substitution with $U\\textbf{x} = \\textbf{z}$. "
    ]
