finished determinants page

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
@@ -252,7 +252,65 @@
     "\n",
     "To prove this, start from the condition that $AA^{-1} = I$, then apply [this theorem](#product-det-thm)!\n",
     "\n",
-    "## Optional: Methods of Computing the Determinant"
+    ":::{prf:theorem} Determinant of a orthogonal matrix\n",
+    ":label: orthogonal-det-thm\n",
+    "\n",
+    "Let $A$ be orthogonal, i.e., $AA^\\top = I$. Then, $\\det A$ is $1$ or $-1$.\n",
+    ":::\n",
+    "\n",
+    "Try to prove this yourself using the properties we have already proven!\n",
+    "\n",
+    "## Optional: Methods of Computing the Determinant\n",
+    "\n",
+    "In the section, we will review/introduce two way of computing the determinant: the Laplace expansion and the PLU-factorization. \n",
+    "\n",
+    ":::{prf:definition} The Laplace Expansion\n",
+    ":label: laplace-expansion-defn\n",
+    "\n",
+    "The Laplace expansion is a recursive definition of the determinant of an $n\\times n$ matrix in terms of the weighted sums of determinants of $(n - 1) \\times (n - 1)$ matrices, and can be derived from our characterization of the determinant of an alternating multilinear map.\n",
+    "\n",
+    "More specifically, to find the determinant of an $n\\times n$ matrix $A$, we choose any arbitrary row $i$ (or arbitrary column $j$) and write the *Laplace expansion along row $i$*:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\det A = \\sum_{j = 1}^{n}{(-1)^{i + j}}a_{ij}m_{ij}\n",
+    "\\end{align*}\n",
+    "\n",
+    "The base case of this recursive relationship is that the determinant of any $1\\times 1$ matrix $\\bm s \\em$ is just $s$.\n",
+    "\n",
+    "Here, $a_{ij}$ is the element at row $i$ and column $j$ of $A$; $m_{ij}$ is the *minor* at row $i$ and column $j$, and is equal to the determinant of the $(n-1)\\times (n - 1)$ submatrix of $A$ obtained by deleting row $i$ and column $j$.\n",
+    ":::\n",
+    "\n",
+    "This is quite an abstract definition, so let's see it at work!\n",
+    "\n",
+    ":::{prf:example} Finding the determinant of a $3\\times 3$ matrix \n",
+    ":label: laplace-expansion-ex\n",
+    "\n",
+    "Consider the $3\\times 3$ matrix $A = \\bm 1&2&3\\\\4&5&6\\\\7&8&9\\em$. Applying the laplace expansion along row 1, and then using the $2\\times 2$ formula for determinants, we have:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left| \\bm 1&2&3\\\\4&5&6\\\\7&8&9\\em \\right| &= (1) \\left| \\bm 5&6\\\\8&9\\em \\right| - (2) \\left| \\bm 4&6\\\\7&9\\em \\right| + (3)\\left| \\bm 4&5\\\\7&8\\em \\right|\\\\\n",
+    "    &= (1) (45 - 48) - (2) (36 - 42) + (3)(32 - 35)\\\\\n",
+    "     &= 0\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "Note that in the Laplace expansion, the row or column chosen to compute the expansion is arbitrary! Thus, it makes sense to expand along rows and columns with lots of zeros; if the coefficient multiplying a submatrix determinant is zero, then we don't have to actually compute that submatrix determinant!\n",
+    "\n",
+    "For small matrices, the Laplace expansion works fine. However, for larger matrices (even with $n \\geq 10$), this method of naively applying the Laplace will require a HUGE number of addition and multiplication operations (on the order of $n!$, or $n$ factorial)!\n",
+    "\n",
+    "However, by applying our [results for triangular matrices](#triangular-det-thm), we can come up with a much more computationally efficient method for computing the determinant.\n",
+    "\n",
+    ":::{prf:definition} The LU Method for Determinants\n",
+    ":label: lu-method-defn\n",
+    "\n",
+    "Recall that every nonsingular matrix $A$ admits a PLU-factorization $A = PLU$. By the determinant rule for products, we can find:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\det A = \\det P \\det L \\det U\n",
+    "\\end{align*}\n",
+    "\n",
+    "Note that $\\det L$ and $\\det U$ are easy to compute, just take the products of their diagonal elements. Furthemore, it is easy to compute the determinant of $P$, a permutation matrix, is significantly easier than with the Laplace expansion than for a general matrix (since most of the entries of $P$ are zeros).\n",
+    ":::"
    ]
   },
   {
