worked on qr alg page

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
@@ -144,9 +144,19 @@
     "\n",
     "## Approximating a Schur Decomposition\n",
     "\n",
-    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? \n",
+    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? The core idea of the QR algorithm is to use an iterative procedure, which, under certain conditions, converges to a Schur decomposition of $A$.\n",
     "\n",
-    "## Pseudocode for the QR Algorithm\n"
+    "* First, we set $A_1 = A$.\n",
+    "\n",
+    "* For $t = 1, 2, \\dots$, let $Q_t R_t = A_t$, with $Q_t$ orthogonal and $R_t$ upper triangular, and define $A_{t + 1} = R_t Q_t = Q_t^\\top A_t Q_t$. In other words, we compute a QR-factorization of $A_t$, and reverse the factors to get $A_{t + 1}$.\n",
+    "\n",
+    "We will not prove this here, but this procedure converges under the assumption that the absolute eigenvalues of $A$ are all distinct. We note that there are more advanced procedures which can get around this assumption, but this basic form of the algorithm highlights the most important ideas.\n",
+    "\n",
+    "To gain some intuition as to why we would expect this procedure to converge to a Schur decomposition of $A$, suppose that $B$ is a fixed point of this procedure, i.e., applying the QR factorization and switching the factors does not change $B$. That is, if $B$ has the QR factorization $B = QR$, then $QR = RQ$, i.e., $Q$ and $R$ commute. In general, this is \"uncommon\" unless $Q = I$ or $R = I$. \n",
+    "\n",
+    "## Pseudocode for the QR Algorithm\n",
+    "\n",
+    "We are now ready to give the pseudocode for the QR Algorithm.\n"
    ]
   }
  ],
