pseudocode for qr alg

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
@@ -150,13 +150,31 @@
     "\n",
     "* For $t = 1, 2, \\dots$, let $Q_t R_t = A_t$, with $Q_t$ orthogonal and $R_t$ upper triangular, and define $A_{t + 1} = R_t Q_t = Q_t^\\top A_t Q_t$. In other words, we compute a QR-factorization of $A_t$, and reverse the factors to get $A_{t + 1}$.\n",
     "\n",
-    "We will not prove this here, but this procedure converges (in the sense that $A_t \\to U$ as $t\\to \\infty$) under the assumption that the absolute eigenvalues of $A$ are all distinct. We note that there are more advanced procedures which can get around this assumption, but this basic form of the algorithm highlights the most important ideas.\n",
+    "We will not prove this here, but this procedure converges (in the sense that $A_t$ converges to an upper triangular matrix as $t\\to \\infty$) under the assumption that the absolute eigenvalues of $A$ are all distinct. We note that there are more advanced procedures which can get around this assumption, but this basic form of the algorithm highlights the most important ideas.\n",
     "\n",
-    "To gain some intuition as to why we would hope this procedure to converge to a Schur decomposition of $A$, suppose that $B$ is a fixed point of this procedure, i.e., applying the QR factorization and switching the factors does not change $B$. That is, if $B$ has the QR factorization $B = QR$, then $QR = RQ$, i.e., $Q$ and $R$ commute. In general, this is \"uncommon\"; one such possibility is that $Q = I$, in which case we will have $B = R$.\n",
+    "To gain some intuition as to why we would hope this procedure to converge to a Schur decomposition of $A$, suppose that $B$ is a fixed point of this procedure, i.e., applying the QR factorization and switching the factors does not change $B$. That is, if $B$ has the QR factorization $B = QR$, then $QR = RQ$, i.e., $Q$ and $R$ commute. In general, this is \"uncommon\"; one such possibility is that $Q = I$, in which case we will have $B = R$. Next, note that for each $t = 1, 2, \\dots$ we have that $A_{t}$ is similar to $A_{t + 1}$ because $A_{t + 1} = Q^\\top A_{t}Q$ for an orthogonal matrix $Q$; convince yourself that this implies that each $A_t$ is similar to $A$.\n",
     "\n",
     "## Pseudocode for the QR Algorithm\n",
     "\n",
-    "We are now ready to give the pseudocode for the QR Algorithm.\n"
+    "We are now ready to give the pseudocode for the QR Algorithm.\n",
+    "\n",
+    ":::{prf:algorithm} The QR Algorithm for Eigenvalues\n",
+    ":label: qr-eigen-alg\n",
+    "\n",
+    "**Inputs** $n\\times n$ matrix $A$ with distinct absolute value eigenvalues $\\lambda_1, \\dots, \\lambda_n$; number of iterations $T$\n",
+    "\n",
+    "**Output** approximate values of to $\\lambda_1, \\dots, \\lambda_2$\n",
+    "\n",
+    "$A_1 \\gets A$\\\n",
+    "**for** $t = 1$ to $T$:\\\n",
+    "$\\quad$ $Q_t, R_t \\gets $ QR factorization of $A_t$\\\n",
+    "$\\quad$ $A_{t + 1} \\gets R_t Q_t$ \\\n",
+    "**return** the diagonal elements of $A_{T + 1}$\n",
+    ":::\n",
+    "\n",
+    "## Python Implementations of the QR Algorithm\n",
+    "\n",
+    "TODO\n"
    ]
   }
  ],
