--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "**Inputs** $n\\times n$ matrix $A$ with distinct absolute value eigenvalues $\\lambda_1, \\dots, \\lambda_n$; number of iterations $T$\n",
     "\n",
-    "**Output** approximate values of to $\\lambda_1, \\dots, \\lambda_2$\n",
+    "**Output** approximate values of to $\\lambda_1, \\dots, \\lambda_n$\n",
     "\n",
     "$A_1 \\gets A$\\\n",
     "**for** $t = 1$ to $T$:\\\n",
