function <-> transform edits in lec 10

--- a/04_Ch_5_Linearity/061-Linear_functions.ipynb
+++ b/04_Ch_5_Linearity/061-Linear_functions.ipynb
@@ -156,7 +156,7 @@
     "v_n\n",
     "\\end{bmatrix}\n",
     "\\end{align*}\n",
-    "Thus we have shown that the way to find the _matrix representation_ of a linear transformation is to evaluate it on the basis elements and then stack them into a matrix $A = \\bm L(\\vv e_1) &L(\\vv e_2) & \\cdots & L(\\vv e_n)\\em$.\n",
+    "Thus we have shown that the way to find the _matrix representation_ of a linear function is to evaluate it on the basis elements and then stack them into a matrix $A = \\bm L(\\vv e_1) &L(\\vv e_2) & \\cdots & L(\\vv e_n)\\em$.\n",
     ":::\n",
     "::::\n",
     "\n",
@@ -197,13 +197,13 @@
    "source": [
     "## Composition\n",
     "\n",
-    "Applying one linear transformation after another is called _composition_: let $V, W, Z$ be vector spaces. If $L: V \\to W$ and $M: W \\to Z$ are linear functions, then the _composite function_ $M \\circ L: V \\to Z$, defined by $(M \\circ L)(\\vv v) = M(L(\\vv v))$, is also linear (easily checked to satisfy rule [(L)](#linear_fn_rule)).\n",
+    "Applying one linear function after another is called _composition_: let $V, W, Z$ be vector spaces. If $L: V \\to W$ and $M: W \\to Z$ are linear functions, then the _composite function_ $M \\circ L: V \\to Z$, defined by $(M \\circ L)(\\vv v) = M(L(\\vv v))$, is also linear (easily checked to satisfy rule [(L)](#linear_fn_rule)).\n",
     "\n",
     "This gives us a \"dynamic\" interpretation of matrix-matrix multiplication. If $L(\\vv v) = A\\vv v$ maps $\\mathbb{R}^n$ to $\\mathbb{R}^m$ and $M(\\vv w) = B\\vv w$ maps $\\mathbb{R}^m$ to $\\mathbb{R}^l$, so that $A \\in \\mathbb{R}^{m \\times n}$ and $B \\in \\mathbb{R}^{l \\times m}$, then:\n",
     "$$\n",
     "(M \\circ L)(\\vv v) = M(L(\\vv v)) = B(A\\vv v) = (BA)\\vv v\n",
     "$$\n",
-    "so that the matrix representation of $M \\circ L: \\mathbb{R}^n \\to \\mathbb{R}^l$ is the matrix product $BA \\in \\mathbb{R}^{l \\times n}$. And, like matrix multiplication, composition of linear functions is in general not commutative (order of transformations matters!)\n",
+    "so that the matrix representation of $M \\circ L: \\mathbb{R}^n \\to \\mathbb{R}^l$ is the matrix product $BA \\in \\mathbb{R}^{l \\times n}$. And, like matrix multiplication, composition of linear functions is in general not commutative (order of applying the function matters!)\n",
     "\n",
     ":::{prf:example}Composing rotations\n",
     ":label: comp_rot_eg\n",
@@ -227,7 +227,7 @@
    "source": [
     "## Inverses\n",
     "\n",
-    "Just as with square matrices, we can define the inverse of a linear transformation. Let $L: V \\to W$ be a linear function. If $M: W \\to V$ is a _linear function_ such that:\n",
+    "Just as with square matrices, we can define the inverse of a linear function. Let $L: V \\to W$ be a linear function. If $M: W \\to V$ is a _linear function_ such that:\n",
     "\n",
     "$$\n",
     "L \\circ M = I_W \\quad \\text{and} \\quad M \\circ L = I_V\n",
