--- a/04_Ch_5_Linearity/063-Linear_systems.ipynb
+++ b/04_Ch_5_Linearity/063-Linear_systems.ipynb
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- how linear systems are defined as linear functions\n",
+    "- examples of general linear systems: derivative and evaluation operators\n",
+    "- how the superposition principle is applied to general linear systems"
    ]
   },
   {
