--- a/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Orthogonal Subspaces\n",
+    "## Orthogonal Subspaces\n",
     "\n",
     "\n",
     ":::{prf:definition} Orthogonal Subspaces\n",
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TO DO: Examples \n",
+    "## TO DO: Examples \n",
     "\n",
     "similar to ALA 4.42, 4.43"
    ]
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Orthogonality of the Fundamental Matrix Subspace\n",
+    "## Orthogonality of the Fundamental Matrix Subspace\n",
     "\n",
     "We previously introduced [the four fundamental subspaces](../01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb#fund_thm) associated with an $m \\times n$ matrix $A$: the column, null, row, and left null spaces. We also saw that the null and row spaces are subspaces with complementary dimensions in $\\mathbb{R}^n$, and the left null space and column space are subspaces with complementary dimensions in $\\mathbb{R}^m$. Moreover, these pairs are orthogonal complements of each other with respect to the standard dot product.\n",
     "\n",
