--- a/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
+++ b/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
@@ -406,7 +406,7 @@
     "\n",
     "[This plot](#data_ls_eg_2) shows train and test error (RMS standards for root mean square, and is the square root of [MMSE](#MMSE_defn)) vs. the degree of the polynomial being fit. Notice that despite train error decreasing monotonically, test error goes down and then increases as we start to over-fit. This plot suggests that pdynomials of degree 4,5, or 6 will generalize well while achieving a small error.\n",
     "\n",
-    "For more about validation and feature engineering, refer to VMLS Ch. 13.2 and 13.3. These are essertivel components of modern data science and machine learning.\n",
+    "For more about validation and feature engineering, refer to VMLS Ch. 13.2 and 13.3. These are essential components of modern data science and machine learning.\n",
     "::::"
    ]
   },
