--- a/04_Ch_5_Linearity/061-Linear_functions.ipynb
+++ b/04_Ch_5_Linearity/061-Linear_functions.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "The key idea is to apply the linear combination property [(LL)](#linear_comb) to the expression $\\vv v = v_1 \\vv e_1 + \\cdots + v_n \\vv e_n$ of $\\vv v$ in the standard basis of $\\mathbb{R}^n$:\n",
     "\\begin{align*}\n",
-    "L(\\vv v) &= L(v_1 \\vv e_1 + \\cdots + v_n \\vv e_n) \\\n",
+    "L(\\vv v) &= L(v_1 \\vv e_1 + \\cdots + v_n \\vv e_n) \\\\\n",
     "&\\overset{(LL)}{=} v_1 L(\\vv e_1) + v_2 L(\\vv e_2) + \\cdots + v_n L(\\vv e_n) \\\\\n",
     "&= \\bm L(\\vv e_1) \\quad L(\\vv e_2) \\quad \\cdots \\quad L(\\vv e_n) \\em\n",
     "\\begin{bmatrix}\n",
@@ -240,7 +240,7 @@
     "Let $V = P^{(n)}$ be the space of polynomials of degree $\\leq n$, and let $W = \\mathbb{R}^{n+1}$. Define the linear map $L : P^{(n)} → \\mathbb{R}^{n+1}$ as follows: for $p(x) = a_0 + a_1x + \\cdots + a_nx^n$,\n",
     "$$\n",
     "L(p) =\\bm\n",
-    "a_0 \\\\ a_1 \\\\vdots \\\\ a_n\n",
+    "a_0 \\\\ a_1 \\\\ \\vdots \\\\ a_n\n",
     "\\em,\n",
     "$$\n",
     "i.e, $L(p)$ stacks the coefficients of $p(x)$ into a vector $L(p) \\in \\mathbb{R}^{n+1}$.\n",
@@ -248,7 +248,7 @@
     "The inverse map $L^{-1}(\\vv a)$ is simply the mapping that takes a vector $\\vv a = \\bm a_0 ,a_1, \\ldots, a_n\\em^{\\top} \\in \\mathbb{R}^{n+1}$ and outputs the polynomial $L^{−1}(\\vv a)(x) = a_0 + a_1x + \\cdots + a_nx^n$. We check that it\n",
     "satisfies\n",
     "$$\n",
-    "L \\circ L^{−1} = I_{\\mathbb{R}^{n+1}} \\ \\text{and} L^{−1} \\circ L = I_{p^{(n)}}\n",
+    "L \\circ L^{−1} = I_{\\mathbb{R}^{n+1}} \\ \\text{and} \\ L^{−1} \\circ L = I_{p^{(n)}}\n",
     "$$\n",
     "First,\n",
     "$$(L \\circ L^{−1})(\\vv a) = L (L^{−1}(\\vv a)) = L((a_0 + a_1x + \\cdots + a_nx^n) = \\bm\n",
@@ -271,7 +271,7 @@
     "::::\n",
     "\n",
     ":::{note}\n",
-    "A more general statement can be made than [the previous one](#iso_state): **any** vector space of dimension $n$ is isomorphic to $\\mathbb{R}^n$, and so by studying Eucledian space, we in fact are gaining an\n",
+    "A more general statement can be made than the previous one: **any** vector space of dimension $n$ is isomorphic to $\\mathbb{R}^n$, and so by studying Eucledian space, we in fact are gaining an\n",
     "understanding of _all finite dimensional vector spaces_.\n",
     ":::"
    ]
