--- a/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Gram-Schmidt Process\n",
+    "## The Gram-Schmidt Process\n",
     "\n",
     "Hopefully we've convinced you that orthogonal bases are useful, so now the natural question becomes: how do I compute one? That's where the famed Gram-Schmidt Process (GSP) comes into play.\n",
     "\n",
