--- a/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Orthogonal Matrices\n",
+    "## Orthogonal Matrices\n",
     "\n",
     "Rotations and reflections play key roles in geometry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a central role in one of the most important methods of linear algebra, the *QR factorization*.\n",
     "\n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The QR Factorization\n",
+    "## The QR Factorization\n",
     "\n",
     "The [GSP](./052-gram_schmidt.ipynb#gram-schmidt-alg), when applied to orthonormalize a basis of $\\mathbb{R}^n$, in fact gives us the famous, incredibly useful *QR factorization* of a matrix:\n",
     "\n",
