--- a/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
@@ -178,7 +178,7 @@
     ":label: orth-compl\n",
     " The orthogonal complement $W^{\\perp}$ of a subspace $W \\subset V$ is defined as the set of all vectors that are orthogonal to $W$:\n",
     "\\begin{equation}\n",
-    "W^{\\perp} = \\{\\vv v\\ in V | \\langle \\vv v, \\vv w\\rangle = 0 \\ \\textrm{for all} \\ \\vv w \\in W\\}.\n",
+    "W^{\\perp} = \\{\\vv v \\in V | \\langle \\vv v, \\vv w\\rangle = 0 \\ \\textrm{for all} \\ \\vv w \\in W\\}.\n",
     "\\end{equation}\n",
     ":::\n",
     "\n",
@@ -233,9 +233,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TO DO: Examples \n",
+    "::::{prf:example}\n",
+    ":label: ALA_eg_1\n",
+    "Let $W = \\{ \\bm t & -t & 2 t \\em^{\\top} | t \\in \\mathbb{R} \\}$ be the line (one-dimensional subspace)\n",
+    "in the direction of the vector $\\vv w_1 = \\bm 1 & -1 & 2 \\em \\in \\mathbb{R}^3$. Let us decompose the vector $\\mathbf{v} = \\bm 1 & 0 & 1 \\em^T \\in \\mathbb{R}^3$ into a sum $\\mathbf{v} = \\mathbf{w} + \\mathbf{z}$ of a vector $\\mathbf{w}$ lying on the line $W$ and a vector $\\mathbf{z}$ belonging to its orthogonal plane $W^\\perp$. Each is obtained by an orthogonal projection onto the subspace in question, but we only need to compute one of the two directly, since the second can be obtained by subtracting the first from $\\mathbf{v}$.\n",
     "\n",
-    "similar to ALA 4.42, 4.43"
+    "Orthogonal projection onto a one-dimensional subspace is easy, since every basis is, trivially, an orthogonal basis. Thus, the projection of $\\mathbf{v}$ onto the line spanned by\n",
+    "$$\n",
+    "\\mathbf{w}_1 = \\bm 1 & -1 & 2 \\em^{\\top} \\quad \\text{is} \\quad \\mathbf{w} = \\frac{\\langle \\mathbf{v}, \\mathbf{w}_1 \\rangle}{\\|\\mathbf{w}_1\\|^2} \\mathbf{w}_1 = \\bm\\frac{1}{2} & \\frac{-1}{2} & 1\\em^{\\top}.\n",
+    "$$\n",
+    "\n",
+    "The component in $W^\\perp$ is then obtained by subtraction:\n",
+    "$$\n",
+    "\\mathbf{z} = \\mathbf{v} - \\mathbf{w} = \\bm\\frac{1}{2} & \\frac{1}{2} & 0\\em^{\\top}.\n",
+    "$$\n",
+    "\n",
+    ":::{note}\n",
+    "Alternatively, one can obtain $\\mathbf{z}$ directly by orthogonal projection onto the plane $W^\\perp$. But you need to be careful: the basis you use for $W^{\\perp}$ should be an orthogonal basis.\n",
+    ":::\n",
+    "::::"
    ]
   },
   {
